# FastqScan

./: Cargo.toml  output1.json  output2.json
src/: calls.rs  getinfo.rs  lib.rs  main.rs  phred.rs  quantity.rs  runner.rs  tests.rs  utils.rs
src/statistics/: base_count_per_pos.rs  base_count_per_read.rs  base_qual_pos_stat.rs  gc_per_read.rs  mod.rs  nuc_table.rs  phred_per_pos.rs  phred_per_read.rs  read_data.rs  read_qual_stat.rs
