[package]
name = "fastq-scan"
version = "0.1.0"
edition = "2024"
description = "Fast and safe Q/C for FastQ files"

[lib]             # Declare the library
name = "fastq_scan"
path = "src/lib.rs"

[[bin]]           # Declare the binary
name = "fastq-scan"
path = "src/main.rs"

[dependencies]
clap = {version = "4.5.32", features = ["derive"]}  # Simplifies construction of the command line interface
flate2 = "1.1.0"  # Can decompress gzipped file on the fly
serde = {version = "1.0.219", features = ["derive"]}  # Enables (de)serialization of structs into various formats
serde_json = "1.0.140"  # Implements (de)serialization of structs to/from JSON
regex = "1"
prettytable-rs = "0.10"
gnuplot = "0.0.45"
typetag = "0.2"   # Enables serde for trait objects